// Produced by Acceleo JavaScript Generator 1.1.0
import "ccsds_mal/types.proto";

import "tcHistory/AckEnum.proto";

package tcHistory.protobuf;

message SuccessiveAck {
extensions 15 to 115;

  optional tcHistory.protobuf.AckEnum scdCop1Ack = 1;
  optional tcHistory.protobuf.AckEnum cop1Ack = 2;
  optional tcHistory.protobuf.AckEnum stationAck = 3;
  optional tcHistory.protobuf.AckEnum missionFailure = 4;
  optional tcHistory.protobuf.AckEnum executionComplete = 5;
  optional tcHistory.protobuf.AckEnum acceptance = 6;
  optional ccsds_mal.protobuf.TIME scdCop1AckRcvDate = 7;
  optional ccsds_mal.protobuf.TIME Cop1AckRcvDate = 8;
  optional ccsds_mal.protobuf.TIME stationAckRcvDate = 9;
  optional ccsds_mal.protobuf.TIME missionFailureRcvDate = 10;
  optional ccsds_mal.protobuf.TIME executionCompleteRcvDate = 11;
  optional ccsds_mal.protobuf.TIME acceptanceRcvDate = 12;
  optional ccsds_mal.protobuf.TIME executionStartRcvDate = 13;
  optional tcHistory.protobuf.AckEnum executionStart = 14;
}
